@@ -16,23 +16,6 @@
      </td>
     </tr>
 
-    <tr>
-     <td>
-      <center>
-       Home :&nbsp;
-       <a href="http://www.gnome.org/pressreleases.html">Press</a> :&nbsp;
-       <a href="organization.html">Organization</a> :&nbsp;
-       <a href="documentation.html">Documentation</a> :&nbsp;
-       <a href="membership.html">Membership</a> :&nbsp;
-       <a href="elections.html">Elections</a> :&nbsp;
-	   <a href="directory.html">Directory</a> :&nbsp;
-       <a href="http://www.gnome.org/friends/">Fundraising</a> 
-      </center>
-     </td>
-    </tr>
-
-    <!-- End of Boilerplate -->
-
     <tr NOSAVE>
      <td NOSAVE>
 
