@@ -1,3 +1,7 @@
+2003-07-23  Gregory Leblanc <gleblanc@linuxweasel.com>
+
+	* index.html: Work in progress, converting to the new template.
+
 2003-06-27  Eric Baudais  <drake@gnome.org>
 
 	* advisory_board.html
